Пример как можно сделать ленту новостей на базе SmartBlogBundle

--- a/src/Dmitxe/SiteBundle/Resources/translations/messages.ru.yml
+++ b/src/Dmitxe/SiteBundle/Resources/translations/messages.ru.yml
@@ -1,4 +1,6 @@
 Blog: Блог
-Create Article: Новая запись
+Create Article: Написать статью
+Create News: Написать новость
 Forum: Форум
 Homepage: Главная
+News: Новости
