рабочий прототип категорий.

--- a/src/SmartCore/Bundle/BlogBundle/Resources/translations/messages.ru.yml
+++ b/src/SmartCore/Bundle/BlogBundle/Resources/translations/messages.ru.yml
@@ -7,6 +7,8 @@ Block: Блок
 Blocks: Блоки
 Cancel: Отменить
 Configuration: Конфигруация
+Category: Категория
+Categories: Категории
 Create: Создать
 Create datetime: Дата создания
 Created at: Дата создания
