Наработки по админке...

--- a/src/SmartCore/Bundle/BlogBundle/Resources/translations/messages.ru.yml
+++ b/src/SmartCore/Bundle/BlogBundle/Resources/translations/messages.ru.yml
@@ -3,6 +3,8 @@ Add: Добавить
 Administration: Управление
 Annotation: Аннотация
 Appearance: Оформление
+Article: Статья
+Articles: Статьи
 Block: Блок
 Blocks: Блоки
 Cancel: Отменить
