чуть чуть причесал шаблончики :)

--- a/src/SmartCore/Bundle/BlogBundle/Resources/translations/messages.ru.yml
+++ b/src/SmartCore/Bundle/BlogBundle/Resources/translations/messages.ru.yml
@@ -2,25 +2,20 @@ Actions: Действия
 Add: Добавить
 Administration: Управление
 Annotation: Аннотация
-Appearance: Оформление
 Article: Статья
 Articles: Статьи
-Block: Блок
-Blocks: Блоки
 Cancel: Отменить
 Configuration: Конфигруация
 Category: Категория
 Categories: Категории
 Create: Создать
+Create article: Создать статью
 Create datetime: Дата создания
 Created at: Дата создания
-Descr: Описание
 Description: Описание
 Delete: Удалить
-Edit folder: Редактировать раздел
-Edit node: Редактировать ноду
+Edit article: Редактирование статьи
 Exit: Выход
-Folder: Папка
 Is active: Включено
 Items count: Кол-во записей
 Keywords: Ключевые слова
@@ -32,11 +27,8 @@ Position: Позиция
 Reports: Отчеты
 Save: Сохранить
 Slug: Часть URI
-Structure: Структура
 Tag: Тэг
 Tags: Тэги
-Template: Шаблон
 Text: Текст
 Title: Заголовок
-Uri part: Часть URI
 Users: Пользователи
