Подключение тегов в админке

--- a/src/SmartCore/Bundle/BlogBundle/Resources/translations/messages.ru.yml
+++ b/src/SmartCore/Bundle/BlogBundle/Resources/translations/messages.ru.yml
@@ -15,6 +15,7 @@ Created at: Дата создания
 Description: Описание
 Delete: Удалить
 Edit article: Редактирование статьи
+Edit tag: Редактирование тега
 Exit: Выход
 Is active: Включено
 Items count: Кол-во записей
