Наработки по формам и шаблонам.

--- a/src/SmartCore/Bundle/BlogBundle/Resources/translations/messages.ru.yml
+++ b/src/SmartCore/Bundle/BlogBundle/Resources/translations/messages.ru.yml
@@ -26,6 +26,8 @@ Name: Имя
 Permissions: Права доступа
 Position: Позиция
 Reports: Отчеты
+Smart blog article create: Создать статью
+Smart blog article edit: Редактирование статьи
 Save: Сохранить
 Slug: Часть URI
 Tag: Тэг
